--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src=" mitaka-modified.png" alt="mitaka profile picture"></td>
+        <td><img style="width:100px; height:100px" src=" mitaka-modified.png" alt="mitaka profile picture"></td>
         <td>  <h1>Asa Mitaka</h1>
           <p><em>Founder and CTO of <strong><a href="https://chainsawmanmangaa.com/ ">the Mitaka</a></strong>.</em> </p>
           <p>I am an Ios and Web Developer. i love Protein</p></td>
@@ -33,45 +33,35 @@
           <th>Dates</th>
           <th>Work</th>
         </tr>
-
       </thead>
-      <tbody>
 
-      </tbody>
-      <tfoot>
-
-      </tfoot>
       <tr>
         <td>2003-2022</td>
         <td>Nothing</td>
-
       </tr>
       <tr>
         <td>2003-2022</td>
         <td>Still nothing</td>
-
       </tr>
-      <tbody>
-        <table>
-          <hr>
-          <h3>Skills</h3>
-        </table cellspacing="10">
-              <tr>
-                <td>Nothing</td>
-                <td>⭐️⭐️⭐️⭐️</td>
-              </tr>
-              <tr>
-                <td>jim</td>
-                <td>⭐️⭐️⭐️⭐️⭐️⭐️</td>
-              </tr>
-              <tr>
-                <td>Nothing</td>
-                <td>⭐️⭐️⭐️</td>
-              </tr>
-            </table>
-              </td>
-            </tr>
-          </table>
+    </table>
+
+    <hr>
+    <h3>Skills</h3>
+
+    <table cellspacing="10">
+      <tr>
+        <td>Nothing</td>
+        <td>⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>jim</td>
+        <td>⭐️⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Nothing</td>
+        <td>⭐️⭐️⭐️</td>
+      </tr>
+    </table>
 
     <hr>
     <a href="hobbies.html">My Hobbies</a>
