--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </table>
 
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
+    <a href="hobbies.html">My Hobby</a>
     <a href="contact-me.html">Contact Me</a>
   </body>
 </html>
