--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img style="width:100px; height:100px" src=" mitaka-modified.png" alt="mitaka profile picture"></td>
+        <td><img style="width:200px; height:200px" src=" mitaka-modified.png" alt="mitaka profile picture"></td>
         <td>  <h1>Asa Mitaka</h1>
           <p><em>Founder and CTO of <strong><a href="https://chainsawmanmangaa.com/ ">the Mitaka</a></strong>.</em> </p>
           <p>I am an Ios and Web Developer. i love Protein</p></td>
@@ -54,7 +54,7 @@
         <td>⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>jim</td>
+        <td>Gym</td>
         <td>⭐️⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
